--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,72 @@
 #root {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
+  box-sizing: border-box;
+  
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+html{
+  font-size: 10px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.header{
+  height: 40vh;
+  background-image: url('./assets/img/hero.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.logo-box{
+  position: absolute;
+  top: 20%;  
+  left: 35%;
+
+}
+
+.logo{
+  width: 45rem;
+  height: 17rem;
+}
+
+.info-box{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: end;
+  align-content: center;
+  justify-self: center;
+
+  width: 80rem;
+  height: 12rem;
+  background: #062226;
+  margin: 5.6rem auto;
+}
+
+.search-box{
+  display: flex;
+  justify-content: center;
+  width: 70rem;
+  height: 11rem;
+  background: #062226;
+  margin: 4rem auto;
+}
+
+.search{
+  align-self: center;
+  width: 80%;
+  height: 30%;
+  background-color: #443737;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+.search-btn{
+  align-self: center;
+  width: 9rem;
+  height: 4.5rem;
+  background-color: #443737;
+  font-size: 1.7rem;
+  color: white;
+  border: 2px white solid ;
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
